<resources>
    <string name="app_name">Modify Layout Challenge (Pinterest)</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="notifications">Notifications</string>
    <string name="search_pins">Search your Pins</string>
    <string name="follower">10\nFollower</string>
    <string name="following">40\nFollowing</string>
    <string name="anshumandubey">Anshuman Dubey</string>
    <string name="info">http://imanshuman.rf.gd/</string>
    <string name="about_text">Too lazy to write something that would complete this field</string>
    <string name="boards">Boards</string>
    <string name="pins">Pins</string>
    <string name="tried">Tried</string>

</resources>
