<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".Profile">
    <Button
        android:id="@+id/back"
        android:layout_width="20dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/back_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/search_bg"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        app:layout_constraintEnd_toStartOf="@+id/plus"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/back"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/search_profile"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/search" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="2dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/search_pins"
            android:textAlignment="center"
            android:textColor="#999999"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:id="@+id/plus"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/plus_icon"
        app:layout_constraintEnd_toStartOf="@+id/settings"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/settings"
        android:layout_width="35dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintStart_toEndOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/follower"
            android:textAlignment="center"
            android:textColor="#444444" />

        <ImageView
            android:id="@+id/main_image"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:src="@drawable/profile" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/following"
            android:textAlignment="center"
            android:textColor="#444444" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/anshumandubey"
        android:textAlignment="center"
        android:textColor="#444444"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintStart_toEndOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/info"
        android:textAlignment="center"
        android:textColor="#444444"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintStart_toEndOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/about_text"
        android:textAlignment="center"
        android:textColor="#444444"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about"
        tools:layout_editor_absoluteY="247dp">

        <TextView
            android:id="@+id/boa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:layout_weight="1"
            android:background="@drawable/active"
            android:fontFamily="sans-serif-condensed"
            android:padding="5dp"
            android:text="@string/boards"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:padding="5dp"
            android:text="@string/pins"
            android:textAlignment="center"
            android:textColor="#2c2c2c" />

        <TextView
            android:id="@+id/tri"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:padding="5dp"
            android:text="@string/tried"
            android:textAlignment="center"
            android:textColor="#2c2c2c" />
    </LinearLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintStart_toEndOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <ImageView
            android:id="@+id/another_dummy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/another_dummy" />
    </ScrollView>
</android.support.constraint.ConstraintLayout>