<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <Button
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/profile_button"
        android:background="@drawable/profile"
        android:layout_marginStart="15dp"
        android:layout_marginTop="18dp"/>
    <View
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/main_logo"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"/>
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="18dp">

        <View
            android:id="@+id/search_view"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/search" />

        <View
            android:id="@+id/camera_view"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/camera" />

    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp">

        <TextView
            android:id="@+id/home"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:textAlignment="center"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/explore"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/explore"
            android:fontFamily="sans-serif-condensed"
            android:textColor="#2c2c2c" />

        <TextView
            android:id="@+id/notifications"
            android:layout_width="0dp"
            android:textAlignment="center"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:layout_height="wrap_content"
            android:text="@string/notifications"
            android:textColor="#2c2c2c" />
    </LinearLayout>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/dummy_content"
        android:scaleType="centerCrop"
        android:scrollbars="vertical"
        android:id="@+id/dummy"
        android:adjustViewBounds="true"/>
    </ScrollView>

</FrameLayout>